<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingVertical="@dimen/d10"
    android:layout_height="wrap_content">
    <TextView
        android:text="VIP专享内容"
        android:layout_width="wrap_content"
        android:id="@+id/vip_view"
        android:visibility="gone"
        android:textSize="@dimen/d18"
        android:textColor="@color/cA99077"
        android:layout_marginBottom="@dimen/d4"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvVipServiceone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/dialog_apply_text_one"
        android:textColor="@color/c202239"
        android:textSize="@dimen/f18"
        />
    <TextView
        android:id="@+id/tvVipServicetwo"
        android:layout_marginTop="@dimen/d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/dialog_apply_text_two"
        android:textColor="@color/c202239"
        android:textSize="@dimen/f18"
        />
    <TextView
        android:id="@+id/tvVipServicePhoneOne"
        android:layout_marginTop="@dimen/d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/service_phone_one"
        android:textColor="@color/c0076FF"
        android:textSize="@dimen/f18"
        />
    <TextView
        android:layout_marginTop="@dimen/d4"
        android:id="@+id/tvVipServicePhonetwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/service_phone_two"
        android:textColor="@color/c0076FF"
        android:textSize="@dimen/f18"
        />
    <TextView
        android:clickable="true"
        android:id="@+id/tvApplyForRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d15"
        android:background="@drawable/but_permission_white_bg"
        android:gravity="center"
        android:paddingLeft="@dimen/d16"
        android:paddingTop="@dimen/d7"
        android:paddingRight="@dimen/d16"
        android:paddingBottom="@dimen/d7"
        android:text="@string/try_to_apply_for_read"
        android:textColor="@color/c9EB2CD"
        android:textSize="@dimen/f16"
        />
    <TextView
        android:id="@+id/tvVipServicethree"
        android:layout_marginTop="@dimen/d6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/c202239"
        android:textSize="@dimen/f12"
        />
    <!--  -->
</LinearLayout>