<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/c2A2D4F"
    android:paddingTop="@dimen/d5"
    android:paddingBottom="@dimen/d5"
    android:orientation="horizontal">
    <com.gjmetal.app.widget.autoText.AutofitTextView
        android:id="@+id/tvFutureName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|left"
        android:paddingLeft="13dp"
        android:text="@string/helperMonth"
        android:lines="1"
        autofit:minTextSize="8sp"
        android:textColor="@color/c6A798E"
        android:textSize="@dimen/f13" />

    <com.gjmetal.app.widget.autoText.AutofitTextView
        android:id="@+id/tvFutureBestNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:lines="1"
        android:gravity="center|right"
        android:text="@string/lmeValue"
        android:textColor="@color/c6A798E"
        autofit:minTextSize="8sp"
        android:textSize="@dimen/f13"  />


    <com.gjmetal.app.widget.autoText.AutofitTextView
        android:id="@+id/tvFutureVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right|center"
        android:text="@string/profit"
        android:lines="1"
        android:textColor="@color/c6A798E"
        android:layout_marginRight="@dimen/d5"
        autofit:minTextSize="8sp"
        android:textSize="@dimen/f13"  />

    <com.gjmetal.app.widget.autoText.AutofitTextView
        android:id="@+id/tvFutureUpOrDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="13dp"
        android:layout_weight="1"
        android:gravity="center|right"
        android:text="@string/profitUpdown"
        android:lines="1"
        android:textColor="@color/c6A798E"
        autofit:minTextSize="8sp"
        android:textSize="@dimen/f13"  />


</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="0.6dp"
    android:background="@color/c2A2D4F"/>
</LinearLayout>