<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/llItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c2A2D4F"
        android:orientation="horizontal"
        android:padding="@dimen/d8"
        android:layout_gravity="center_vertical"
        >

        <!--时间-->
        <com.gjmetal.app.widget.autoText.AutofitTextView
            android:id="@+id/tvMonthTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.3"
            android:gravity="center|left"
            android:text="@string/txt_month_time"
            android:textColor="@color/cE7EDF5"
            android:lines="1"
            autofit:minTextSize="@dimen/f8"
            android:textSize="@dimen/f16" />

        <!--周均价-->
        <com.gjmetal.app.widget.autoText.AutofitTextView
            android:id="@+id/tvAvgPrice"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:lines="1"
            android:gravity="center|right"
            autofit:minTextSize="@dimen/f8"
            android:text="@string/txt_avg_price"
            android:textColor="@color/cE7EDF5"
            android:textSize="@dimen/f16" />
        <!--单位-->
        <com.gjmetal.app.widget.autoText.AutofitTextView
            android:id="@+id/tvMonthUnit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:lines="1"
            android:gravity="center|right"
            android:text="@string/txt_unit"
            android:textColor="@color/cE7EDF5"
            autofit:minTextSize="@dimen/f8"
            android:textSize="@dimen/f16" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d2"
        android:background="@color/c2A2D4F"/>
</LinearLayout>