<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
   android:padding="@dimen/d10"
    android:background="@drawable/dialog_null_permission_bg"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="@dimen/d6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tvTitle"
        android:text="@string/privacy"
        android:textColor="@color/c202239"
        android:layout_gravity="center"
        android:textSize="@dimen/f16"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/wvPrivacy"
            android:background="@android:color/transparent"
            />
        <TextView
            android:id="@+id/tvPrivacy"
            android:visibility="visible"
            android:padding="@dimen/d10"
            android:background="@color/cFFFFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/privacy_text"
            android:textColor="@color/c202239"
            android:textSize="@dimen/f14"
            />
        <com.gjmetal.app.widget.EmptyView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:background="@color/cFFFFFFFF"
            android:layout_height="match_parent">
        </com.gjmetal.app.widget.EmptyView>
    </RelativeLayout>


    <Button
        android:layout_marginTop="@dimen/d10"
        android:id="@+id/btnDialogCancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/rb_lme_bg_selecter_two"
        android:text="@string/read_is"
        android:textColor="@color/cE7EDF5"
        android:textSize="@dimen/f16" />
</LinearLayout>